<resources>
    <string name="app_name">Cross And Circle</string>
    <string name="un_jugador">1 Player</string>
    <string name="dos_jugadores">2 Players</string>
    <string name="facil">Easy</string>
    <string name="normal">Normal</string>
    <string name="dificil">Insane</string>
    <string name="casilla">Tile</string>
    <string name="circulos_gana">Circles Win !</string>
    <string name="aspas_gana">Crosses Win !</string>
    <string name="empate">Tie !</string>
    <string name="pierdes">You Lost ! Try Again!</string>
</resources>