<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_pantalla"
    android:weightSum="1"
    android:orientation="horizontal"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv1"
            style="@style/titulo"
            android:text="@string/app_name" />

        <Button
            android:id="@+id/btn1"
            style="@style/boton"
            android:text="@string/un_jugador" />

        <RadioGroup
            android:id="@+id/configD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_facil"
                style="@style/radio"
                android:text="@string/facil" />

            <RadioButton
                android:id="@+id/rb_normal"
                style="@style/radio"
                android:checked="true"
                android:text="@string/normal" />

            <RadioButton
                android:id="@+id/rb_dificil"
                style="@style/radio"
                android:text="@string/dificil" />
        </RadioGroup>

        <Button
            android:id="@+id/btn2"
            style="@style/boton"
            android:text="@string/dos_jugadores" />

    </LinearLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:columnCount="3"
        android:rowCount="3">

        <ImageView
            android:id="@+id/a1"
            style="@style/casilla"
            android:src="@drawable/aspa2" />

        <ImageView
            android:id="@+id/a2"
            style="@style/casilla"
            android:src="@drawable/casilla2" />

        <ImageView
            android:id="@+id/a3"
            style="@style/casilla"
            android:src="@drawable/aspa2" />

        <ImageView
            android:id="@+id/b1"
            style="@style/casilla"
            android:src="@drawable/casilla2" />

        <ImageView
            android:id="@+id/b2"
            style="@style/casilla"
            android:src="@drawable/circulo2" />

        <ImageView
            android:id="@+id/b3"
            style="@style/casilla"
            android:src="@drawable/casilla2" />

        <ImageView
            android:id="@+id/c1"
            style="@style/casilla"
            android:src="@drawable/circulo2" />

        <ImageView
            android:id="@+id/c2"

            style="@style/casilla"
            android:src="@drawable/aspa2" />

        <ImageView
            android:id="@+id/c3"
            style="@style/casilla"
            android:src="@drawable/casilla2" />
    </GridLayout>


</LinearLayout>